# GalCommon

./: .gitignore  CMakeLists.txt  ReadMe.md  changelog.md  codecov.yml  main.cpp
.github/workflows/: standalone.yml  test.yml
documentation/: CMakeLists.txt
include/: gal_algorithm.hpp  gal_enum_operator.hpp  gal_support.hpp  gal_type_traits.hpp  support.hpp
lib/: CMakeLists.txt
lib/include/: gal_type_traits.hpp  support.hpp
test/: CMakeLists.txt  main.cpp
test/source/: algorithm_test.hpp  type_trait_test.hpp
